--- a/client/src/Style/Page.css
+++ b/client/src/Style/Page.css
@@ -4,4 +4,38 @@
     height: 100%;
     width: 100%;
     display: flex;
+    flex-direction: column;
+    overflow-y: auto;
+}
+.HeaderContainer{
+    position: relative;
+    width: 100%;
+    height: 80px;
+}
+.contentbox{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: transparent;
+    width: 100%;
+    height: calc(100vh - 80px);
+    pointer-events: none;
+}
+
+.contentcontainer{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    height: 90%;
+    display: flex;
+    background-color: rgba(255, 255, 255, 0.3);
+    overflow-y: auto;
+    width: 80%;
+    pointer-events: all;
+}
+.content{
+    height: 100%;
+    display: flex;
+    flex: 1;
+
 }
